# VST-Maker

./: README.md
Plugins/Dreamverb/: CMakeLists.txt  build.sh
Plugins/Dreamverb/Dreamverb.vst3/Contents/MacOS/: Dreamverb
Plugins/Dreamverb/Dreamverb.vst3/Contents/_CodeSignature/: CodeResources
Plugins/Dreamverb/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/ECHODLY/: CMakeLists.txt
Plugins/ECHODLY/ECHODLY.vst3/Contents/: Info.plist
Plugins/ECHODLY/ECHODLY.vst3/Contents/MacOS/: ECHODLY
Plugins/ECHODLY/ECHODLY.vst3/Contents/Resources/: moduleinfo.json
Plugins/ECHODLY/ECHODLY.vst3/Contents/_CodeSignature/: CodeResources
Plugins/ECHODLY/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/Saturatur/: CMakeLists.txt
Plugins/Saturatur/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Projects/: DreamVerb.scproj  ECHODLY.scproj
Source/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Tools/: PluginStudio_SoundCapsule.html
